# audia

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/engine/: mod.rs  pipeline.rs
src/ui/: mod.rs  spectrogram.rs
