[package]
name = "audia"
version = "0.1.0"
edition = "2021"
authors = [ "Alex Pecsi <alex.pecsi@gmail.com>" ]
keywords = [ ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
iced = "0.7"
plotters = { version = "0.3.4", default_features = false, features = [ "line_series" ] }
plotters-iced = "0.6"
fast_log = "1.5"
log = "0.4"

crossbeam-channel = "0.5"

#rustfft = "6.1.0"
spectrum-analyzer = "1.2"

