[package]
name = "audia"
version = "0.1.0"
edition = "2021"
authors = [ "Alex Pecsi <alex.pecsi@gmail.com>" ]
keywords = [ ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
iced = { version = "0.10", features = [ "smol", "canvas" ] }
plotters = { version = "0.3", default_features = false, features = [ "line_series" ] }
plotters-iced = "0.9"
fast_log = "1.6"
log = "0.4"

crossbeam-channel = "0.5"
ringbuf = "0.3"

#rustfft = "6.1.0"
spectrum-analyzer = "1.4"

fundsp = "0.15"
